--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 
     var urlinfo = window.location.href;
     var stuinfo = decodeURI(urlinfo.split('?')[1]);
-    document.getElementsByClassName("list-group")[0].innerHTML = '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">学工号</div>：<div>' + stuinfo.split('/')[1] + '</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">姓名</div>：<div>' + stuinfo.split('/')[0] + '</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">验证位置</div>：<div>' + stuinfo.split('/')[2] + '</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">进出状态</div>：<div>进入</div></li>';
+    document.getElementsByClassName("list-group")[0].innerHTML = '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">学工号</div>：<div>20181278</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">姓名</div>：<div>刘辰</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">验证位置</div>：<div>南湖校区西门</div></li>' + '<li class="list-group-item bg-transparent text-white d-flex"><div style="min-width: 4em; text-align-last: justify;">进出状态</div>：<div>进入</div></li>';
 })()
 </script>
